--- a/Pipfile
+++ b/Pipfile
@@ -5,12 +5,28 @@ name = "pypi"
 
 [packages]
 django = "==2.2"
-djangorestframework = "*"
-django-cors-headers = "*"
-whitenoise = "*"
-gunicorn = "*"
-dj-database-url = "*"
-psycopg2-binary = "*"
+djangorestframework = "==3.13.1"
+django-cors-headers = "==3.11.0"
+whitenoise = "==6.2.0"
+gunicorn = "==20.1.0"
+dj-database-url = "==0.5.0"
+psycopg2-binary = "==2.9.3"
+pillow = "==9.1.1"
+asgiref = "==3.5.2"
+astroid = "==2.11.6"
+dill = "==0.3.5.1"
+isort = "==5.10.1"
+lazy-object-proxy = "==1.7.1"
+mccabe = "==0.7.0"
+platformdirs = "==2.5.2"
+pylint = "==2.14.3"
+pytz = "==2022.1"
+sqlparse = "==0.4.2"
+tomli = "==2.0.1"
+tomlkit = "==0.11.0"
+typed-ast = "==1.5.4"
+typing-extensions = "==4.2.0"
+wrapt = "==1.14.1"
 
 [dev-packages]
 pylint = "*"
