--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,7 @@ django-cors-headers = "==3.11.0"
 whitenoise = "==6.2.0"
 gunicorn = "==20.1.0"
 dj-database-url = "==0.5.0"
-psycopg2-binary = "==2.9.3"
+psycopg2-binary = ">=2.8,<2.9"
 pillow = "==9.1.1"
 asgiref = "==3.5.2"
 astroid = "==2.11.6"
