--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ lazy-object-proxy==1.7.1
 mccabe==0.7.0
 Pillow==9.1.1
 platformdirs==2.5.2
-psycopg2-binary==2.9.3
+psycopg2-binary>=2.8,<2.9
 pylint==2.14.3
 pytz==2022.1
 sqlparse==0.4.2
