--- a/Pipfile
+++ b/Pipfile
@@ -27,6 +27,10 @@ tomlkit = "==0.11.0"
 typed-ast = "==1.5.4"
 typing-extensions = "==4.2.0"
 wrapt = "==1.14.1"
+boto3 = "*"
+django-storages = "*"
+django-environ = "*"
+python-dotenv = "*"
 
 [dev-packages]
 pylint = "*"
